--- a/package.json
+++ b/package.json
@@ -2,20 +2,43 @@
   "name": "nexmax-dashboard",
   "version": "1.0.0",
   "description": "NexMax Dashboard - Interactive Dashboard with Username-based Authentication",
-  "main": "login.html",
+  "private": true,
   "scripts": {
-    "dev": "vercel dev",
-    "build": "echo 'Static site - no build required'",
-    "start": "vercel dev"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "next": "^14.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "@supabase/supabase-js": "^2.38.0",
+    "chart.js": "^4.4.0",
+    "react-chartjs-2": "^5.2.0",
+    "lucide-react": "^0.294.0",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^2.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "autoprefixer": "^10.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "^14.0.0",
+    "postcss": "^8.0.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.0.0"
   },
   "keywords": [
     "dashboard",
-    "html",
-    "css",
-    "javascript",
+    "nextjs",
+    "react",
     "supabase",
     "authentication",
-    "charts"
+    "charts",
+    "typescript"
   ],
   "author": "SevaIrawan",
   "license": "MIT",
